<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCPI Suite</string>
    <string name="title_treesection">Tree</string>
    <string name="title_sectionscpi">SCPI</string>
    <string name="title_sectionhistory">History</string>
    <string name="title_sectionbatch">Batch</string>
    <string name="title_sectiondata">Data</string>
    <string name="title_sectionlog">Log</string>
    <string name="title_sectiontree">Tree</string>
    <string name="title_activity_scpi">SCPI</string>
    <string name="title_activity_tree">Tree</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_batch">Batch</string>
    <string name="title_activity_data">Data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_connectinstrument">Connect Instrument</string>
    <string name="menu_disconnectinstrument">Disconnect Instrument</string>
    <string name="menu_connectserver">Connect Server</string>
    <string name="menu_disconnectserver">Disconnect Server</string>

    <string name="textview_scpitiming">00:00:00.0</string>

    <string name="imgbtn_scpisend">Send</string>
    <string name="imgbtn_scpisendquery">Send amp; Query</string>
    <string name="imgbtn_scpiquery">Query</string>
    <string name="imgbtn_scpiread">Read</string>
    <string name="imgbtn_scpistop">Stop</string>
    
    <string name="etxt_scpicommandhint">Please input the SCPI command.</string>
    <string name="etxt_scpiparameterhint">Please input the parameter.</string>
    
    <string name="txtv_scpicommand">Command</string>
    <string name="txtv_scpiparameter">Parameter</string>

    <string name="txtv_conninstconnstr">Config Connection</string>
    <string name="etxt_conninstconnstr">Hostname|IP[::inst[number]]</string>
    
    <string name="imgbtn_conninstselect">Select</string>
    <string name="imgbtn_conninstok">OK</string>
    <string name="imgbtn_conninstcancel">Cancel</string>
    		    
</resources>