<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager_scpi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScpiActivity" >
    <EditText
        android:id="@+id/etxt_scpiscpi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etxt_scpiscpihint"
        android:inputType="text" >
        <requestFocus />
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageButton
            android:id="@+id/imgbtn_scpisend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgbtn_scpisend"
            android:src="@drawable/ic_scpisend" />        
        <LinearLayout
            android:layout_width="10dip"
        	android:layout_height="wrap_content"
        	android:background="@android:color/transparent" />        
        <ImageButton
            android:id="@+id/imgbtn_scpisendquery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scpisendquery"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgbtn_scpisendquery" />          
        <LinearLayout 
            android:layout_width="10dip"
        	android:layout_height="wrap_content"
        	android:background="@android:color/transparent" />        
        <ImageButton
            android:id="@+id/imgbtn_scpiquery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scpiquery"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgbtn_scpiquery" />               
        <LinearLayout 
            android:layout_width="10dip"
        	android:layout_height="wrap_content"
        	android:background="@android:color/transparent" />        
        <ImageButton
            android:id="@+id/imgbtn_scpiread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scpiread"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgbtn_scpiread" />                
        <LinearLayout 
            android:layout_width="10dip"
        	android:layout_height="wrap_content"
        	android:background="@android:color/transparent" />        
        <ImageButton
            android:id="@+id/imgbtn_scpistop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scpistop"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgbtn_scpistop" />                
        <LinearLayout 
            android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:background="@android:color/transparent"
        	android:layout_weight="1" />        
        <ImageButton
            android:id="@+id/imgbtn_scpioptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scpioptions"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imgbtn_scpistop" />        
    </LinearLayout>
    <TextView
        android:id="@+id/txtv_scpilog"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ProgressBar
            android:id="@+id/pbar_scpitiming"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/txtv_scpitiming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_scpitiming" />
    </LinearLayout>
</LinearLayout>